# Technical-task-LLM-inference-optimization

./: README.md  batcher.py
batcher/: CMakeLists.txt
batcher/include/: Accelerator.h  Batch.h  Request.h  ScheduleModel.h
batcher/src/: main.cpp
